added launch screen and some small style changes

--- a/ConfessionsDynamicApp/Base.lproj/LaunchScreen.storyboard
+++ b/ConfessionsDynamicApp/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,46 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cornell" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bb5-Pc-WYv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uPf-Jk-1c6">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cornellLogo" translatesAutoresizingMaskIntoConstraints="NO" id="0J4-YX-b3l">
+                                <rect key="frame" x="75" y="221" width="225" height="225"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="225" id="NbI-rX-YyZ"/>
+                                    <constraint firstAttribute="height" constant="225" id="lNK-mx-SvY"/>
+                                    <constraint firstAttribute="width" secondItem="0J4-YX-b3l" secondAttribute="height" multiplier="1:1" id="pMs-hO-BfZ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="uPf-Jk-1c6" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5DC-fF-Z10"/>
+                            <constraint firstAttribute="trailing" secondItem="bb5-Pc-WYv" secondAttribute="trailing" id="SBe-Rt-tzP"/>
+                            <constraint firstItem="bb5-Pc-WYv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SeM-Nj-XUn"/>
+                            <constraint firstItem="0J4-YX-b3l" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WbM-EL-BFc"/>
+                            <constraint firstItem="uPf-Jk-1c6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Yrm-2n-kHt"/>
+                            <constraint firstItem="0J4-YX-b3l" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ard-RE-arQ"/>
+                            <constraint firstItem="uPf-Jk-1c6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eHV-vG-ucO"/>
+                            <constraint firstItem="bb5-Pc-WYv" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="lwz-oG-xq3"/>
+                            <constraint firstItem="uPf-Jk-1c6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="t2V-6v-s6P"/>
+                            <constraint firstItem="bb5-Pc-WYv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="t2t-4w-EJR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cornell" width="2512" height="1674"/>
+        <image name="cornellLogo" width="980" height="980"/>
+    </resources>
 </document>
